@@ -26,6 +26,14 @@ namespace NextPVR
   class Request
   {
     public:
+      /*
+      * Singleton getter for the instance
+      */
+      static Request& GetInstance()
+      {
+        static Request request;
+        return request;
+      }
       int DoRequest(const char *resource, std::string &response);
       int FileCopy(const char *resource, std::string fileName);
       void setSID(char *newsid) {strcpy(m_sid,newsid);};
@@ -33,13 +41,15 @@ namespace NextPVR
       bool OneTimeSetup(void *hdl);
       const char *getSID() {return m_sid;};
       std::vector<std::vector<std::string>> Discovery();
-      Request(void){};
-      virtual ~Request() {};
     private:
+      Request() = default;
+
+      Request(Request const&) = delete;
+      void operator=(Request const&) = delete;
+
       Settings& m_settings = Settings::GetInstance();
       P8PLATFORM::CMutex m_mutexRequest;
       time_t m_start = 0;
       char m_sid[64]{0};
   };
-  extern Request *m_backEnd;
 }
