@@ -1,8 +1,9 @@
 v4.4.0
 - Move to Matrix settings.xml format enable new Kodi and backend options
-- Major restructuring of internal settings variables,
+- Major restructuring of internal settings variables and new Settings class
+- Change to Request Class
 - Move global varables to Settings
-- Add NextPVR UDP Discovery protocol
+- Add NextPVR UDP Discovery protocol, display to user
 - Support Matrix folder view count (by faking the play count)
 - Flatten one-off recordings
 - Support recording filesize via the filesystem
@@ -10,6 +11,7 @@ v4.4.0
 - Show multiple genres with colour tags from V5 backend
 - Only get EPG listing when backend has EPG for channel - V5
 - Fix GetNumChannels() return count of all channels.
+- Add menuhooks to reset channels, icons, and groups and also to 'Forget' recording
 
 v4.3.8
 - Update: PVR API 6.5.0
